# hswip

./: README  hswip.cabal
src/Language/Prolog/: HSwip.hs
src/Language/Prolog/HSwip/: Internals.hs  LowLevel.hs
