name:           hswip
version:        0.3
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL
license-file:   LICENSE
copyright:      (c) Evgeny Tarasov
maintainer:     etarasov.ekb@gmail.com
stability:      experimental
synopsis:       embedding prolog in haskell
description:    Library for embedding swi-prolog in haskell inspired by pyswip.
                You should install swi-prolog in order to use the library.
                It is recommended to use swi-prolog-5.10 or newer.
category:       Foreign, Language
tested-with:    GHC==7.10.1

library
    default-language: Haskell98
    exposed-modules: Language.Prolog.HSwip,
                     Language.Prolog.HSwip.LowLevel

    other-modules:   Language.Prolog.HSwip.Internals

    default-extensions: ForeignFunctionInterface

    build-depends:  base < 5,
                    mtl >= 1.1
    hs-source-dirs: src
    ghc-options:    -Wall

    pkgconfig-depends: swipl
